# paris-hackathon-2026-inference

./: CLAUDE.md  README.md  RESULTS.md  pyproject.toml  start.sh  start_multi.sh
server/: config.py  engine.py  engine_continious.py  engine_static.py  main.py  proxy.py
