[project]
name = "hackathon"
version = "0.1.0"
description = "Evaluation harness for Qwen3.5-35B-A3B inference engine hackathon"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "lm-eval[api]>=0.4.4",
    "transformers>=4.50",
    "accelerate>=0.30",
    "tabulate",
    "tqdm",
    "numpy",
]

[project.optional-dependencies]
baseline = ["vllm>=0.8"]
server = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "uvloop>=0.19",
    "torch>=2.3",
    "safetensors>=0.4",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["eval*"]

[project.scripts]
check-server = "eval.check_server:main"
run-correctness = "eval.correctness.run_correctness:main"
run-throughput = "eval.throughput.run_throughput:main"
